--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:focus, a:visited, a:active{
 	text-align: center;
 	color: #fff;
 	height: 100vh;
-	background: #000 url(../img/main_bg.jpg) center center no-repeat;
+        /*background: #000 url(../img/main_bg.jpg) center center no-repeat;*/
 }
 .main-overlay{
 	position:absolute;
